[gd_scene load_steps=3 format=3 uid="uid://fwhoypo2pqst"]

[ext_resource type="Script" uid="uid://duq40bg75u55a" path="res://addons/maaacks_game_template/base/scenes/credits/paginated_credits.gd" id="1_hny8b"]
[ext_resource type="Script" uid="uid://cc2wtqasev7le" path="res://addons/maaacks_game_template/base/scenes/credits/credits_label.gd" id="2_g23vg"]

[node name="PaginatedCredits" type="Control"]
layout_mode = 3
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
script = ExtResource("1_hny8b")

[node name="VBoxContainer" type="VBoxContainer" parent="."]
layout_mode = 1
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2

[node name="PageContainer" type="HBoxContainer" parent="VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
size_flags_vertical = 3
alignment = 1

[node name="PaginationControls" type="HBoxContainer" parent="VBoxContainer"]
layout_mode = 2
alignment = 1

[node name="Spacer" type="Control" parent="VBoxContainer/PaginationControls"]
layout_mode = 2
size_flags_horizontal = 3

[node name="PreviousButton" type="Button" parent="VBoxContainer/PaginationControls"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "< Previous"

[node name="Spacer2" type="Control" parent="VBoxContainer/PaginationControls"]
layout_mode = 2
size_flags_horizontal = 3

[node name="NextButton" type="Button" parent="VBoxContainer/PaginationControls"]
unique_name_in_owner = true
layout_mode = 2
size_flags_horizontal = 3
disabled = true
text = "Next >"

[node name="Spacer3" type="Control" parent="VBoxContainer/PaginationControls"]
layout_mode = 2
size_flags_horizontal = 3

[node name="CreditsLabel" type="RichTextLabel" parent="."]
unique_name_in_owner = true
visible = false
layout_mode = 0
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("2_g23vg")
h1_font_size = 64
h2_font_size = 48
h3_font_size = 32
h4_font_size = 24
max_image_width = 80
